--- a/css/custom-styles/_copy-code-btn.scss
+++ b/css/custom-styles/_copy-code-btn.scss
@@ -18,7 +18,7 @@ $check-icon-object: map-merge(
   ));
 
 .usa-accordion__copy-button {
-  left: 100%;
+  height: fit-content;
   margin-bottom: units(2);
   position: sticky;
   top: units(1);
@@ -41,20 +41,4 @@ $check-icon-object: map-merge(
     // Offset for nav
     top: units(10);
   }
-  
-  // In larger than mobile views, compensate for the buttons height
-  @include at-media("mobile-lg") {
-    margin-bottom: 0;
-
-    // Selector for code wrapper generated by template
-    & ~ div > figure {
-      position: relative;
-      top: units(-6);
-    }
-  }
-}
-
-// Necessary for sticky button to work correctly
-.usa-accordion__content:has(.usa-accordion__copy-button) {
-  overflow: initial;
 }
